--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/router": "~4.1.0",
     "nativescript-angular": "~3.1.0",
     "nativescript-theme-core": "~1.0.2",
+    "@ngrx/core": "1.2.0",
+    "@ngrx/effects": "2.0.4",
+    "@ngrx/store": "2.2.3",
     "reflect-metadata": "~0.1.8",
-    "rxjs": "~5.3.0",
+    "rxjs": "5.4.2",
     "tns-core-modules": "~3.1.0",
     "zone.js": "~0.8.2"
   },
